Fri May 04 20:07:44 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* queryparser/termgenerator_internal.cc: Fix bug in termgenerator -
	  arguments to add_posting were the wrong way round.

Fri May 04 20:00:40 BST 2007  Olly Betts <olly@survex.com>

	* queryparser/termgenerator_internal.cc: Limit term length, handle
	  infix and suffix characters, and convert apostrophes to ASCII
	  representation.

Fri May 04 19:47:43 BST 2007  Olly Betts <olly@survex.com>

	* include/xapian/unicode.h: Fill in remaining missing documentation
	  comments.

Fri May 04 19:30:56 BST 2007  Olly Betts <olly@survex.com>

	* include/xapian/termgenerator.h: Add convenience version of
	  index_text() and index_text_without_positions() which take a
	  std::string instead of a Utf8Iterator.

Fri May 04 17:11:11 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* unicode/utf8itor.cc: Fix segfault bug in Utf8Iterator::operator*().
	  If this was called when the iterator had reached end, invalid
	  memory was accessed because p was compared to end, p will always
	  be set to NULL when the iterator reaches the end.  No regression
	  test, but the smoketest tests I'm implementing in the bindings
	  will excercise this code.

Fri May 04 16:29:51 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* include/xapian/unicode.h: Add documentation comments to
	  Utf8Iterator, so I don't have to work out how it works again.

Fri May 04 14:55:32 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* include/xapian/unicode.h: Add assign() function which takes a
	  string, for symmetry with the constructors.  Also makes
	  implementing the bindings easier.

Fri May 04 13:04:52 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* include/Makefile.mk: Add termgenerator.h to distribution
	  tarballs.

Fri May 04 03:41:56 BST 2007  Olly Betts <olly@survex.com>

	* tests/harness/testsuite.h: Test against pow(10, -DBL_DIG) rather