@@ -1,3 +1,7 @@
+Fri May 04 22:50:54 BST 2007  Olly Betts <olly@survex.com>
+
+	* docs/intro_ir.html: Fix a few typos; elaborate on a few points.
+
 Fri May 04 20:07:44 BST 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* queryparser/termgenerator_internal.cc: Fix bug in termgenerator -
